--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
         </dependency>
 
         <!--JSON REST-->
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+            <!--<artifactId>jackson-core</artifactId>-->
+            <!--<version>2.6.7</version>-->
+        <!--</dependency>-->
+
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
